# ppi

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yaml
docs/: conf.py
ppi_toolkit/: analyzer.py  database.py  joiner.py  plotting.py  search.py
src/ppi/core/: initialize_db.py  ppi_data_manager.py
src/ppi/core/utils/: download_metadata.py  download_series_data.py
src/ppi/db_models/: metadata.py
tests/: conftest.py  test_analyzer.py  test_downloader.py  test_downloaders.py  test_integration.py  test_ppi_analyzer.py  test_ppi_data_manager.py  test_search.py  test_visualizer.py
