[tool.poetry]
name = "ppi-toolkit"
version = "0.1.0"
description = "A Python library for retrieving, storing, and analyzing PPI data."
authors = ["Justin Goss <justinjagoss@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.0"
pandas = "^1.0"
rapidfuzz = "^2.0"  # If you use fuzzy matching

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"