[tool.poetry]
name = "ppi-toolkit"
version = "0.1.0"
description = "A Python library for retrieving, storing, and analyzing PPI data."
authors = ["Justin Goss <justinjagoss@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
rapidfuzz = "^3.12.2"
pytest-cov = "^6.0.0"
matplotlib = "^3.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"