[metadata]
name = ppi
version = 0.1.0
author = Justin Goss
author_email = justinjagoss@gmail.com
description = A toolkit to make downloading and working with Producer Price Index data a snap
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/jjagoss/ppi
classifiers =
    Programming Language :: Python :: 3.12
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
    Topics :: Economics / Financial Analysis

[options]
package_dir = src
packages = find:
python_requires = >=3.12
install_requires =
    pandas>=1.3.0
    matplotlib>=3.4.0
    numpy>=1.20.0
    requests>=2.25.0
    sqlalchemy>=1.4.0
    fuzzywuzzy>=0.18.0
    python-Levenshtein>=0.12.0
    pandera>=0.6.5

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ppi = ppi.cli.commands:main